Added support for GPUs with compute capability 9.0 (H100)

--- a/examples/Makefile
+++ b/examples/Makefile
@@ -20,8 +20,8 @@ ifeq ($(COMPILER),nvidia)
  FC=nvfortran
  LD=$(FC)
  ifeq ($(TARGET),gpu) 
-  FFLAGS=-O3 -Mpreprocess -gpu=cc80 -acc=verystrict -Minfo=accel
-  LFLAGS=-gpu=cc80 -acc=verystrict -cuda
+  FFLAGS=-O3 -Mpreprocess -gpu=cc80,cc90 -acc=verystrict -Minfo=accel
+  LFLAGS=-gpu=cc80,cc90 -acc=verystrict -cuda
  else
   FFLAGS=-O3 -Mpreprocess -mp
   LFLAGS=-mp
